--- a/homework/index.html
+++ b/homework/index.html
@@ -3,8 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<div class="wrapper">
+  <div class="header">
+    <div class="header-top">
+      <a href="#">(+123) 456 789</a>
+      <div class="user-menu">
+        <a href="#">Log in</a>    or   <a href="#">Register</a>
+      </div>
+    </div>
+    <div class="header-content">
+      <a id="logo" href="#">
+        <img src="img/Logo.png" alt="Logo">
+      </a>
+      <input type="text" placeholder="Search products...">
+      <a id="search" href="#">
+        <img src="img/Search.png">
+      </a>
+      <nav>
+        <ul class="main-menu">
+          <li class="active"><a href="#">Home</a> </li>
+          <li><a href="#">Living room</a> </li>
+          <li><a href="#">Office</a> </li>
+          <li><a href="#">Bedroom</a> </li>
+          <li><a href="#">Blog</a> </li>
+          <li><a href="#">Contact</a> </li>
+        </ul>
+      </nav>
+
+      <a id="bag" href="#">
+        <img src="img/Bag.png">
+      </a>
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
