--- a/homework/index.html
+++ b/homework/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>FUNITURE</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
       <a id="logo" href="#">
         <img src="img/Logo.png" alt="Logo">
       </a>
-      <input type="text" placeholder="Search products...">
+      <input type="text" placeholder="     Search products...">
       <a id="search" href="#">
         <img src="img/Search.png">
       </a>
