--- a/homework/index.html
+++ b/homework/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>FUNITURE</title>
+    <meta charset="UTF-8">
+    <title>Header</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="wrapper">
-  <div class="header">
-    <div class="header-top">
-      <a href="#">(+123) 456 789</a>
-      <div class="user-menu">
-        <a href="#">Log in</a>    or   <a href="#">Register</a>
-      </div>
-    </div>
-    <div class="header-content">
-      <a id="logo" href="#">
-        <img src="img/Logo.png" alt="Logo">
-      </a>
-      <input type="text" placeholder="     Search products...">
-      <a id="search" href="#">
-        <img src="img/Search.png">
-      </a>
-      <nav>
-        <ul class="main-menu">
-          <li class="active"><a href="#">Home</a> </li>
-          <li><a href="#">Living room</a> </li>
-          <li><a href="#">Office</a> </li>
-          <li><a href="#">Bedroom</a> </li>
-          <li><a href="#">Blog</a> </li>
-          <li><a href="#">Contact</a> </li>
-        </ul>
-      </nav>
-
-      <a id="bag" href="#">
-        <img src="img/Bag.png">
-      </a>
+<header>
+  <div class="up-header clear-fix">
+    <div class="container">
+      <a href="tel:123456789" class="phone"> (+123) 456 789</a>
+      <div class="user-menu"><a href="#"> Log in</a> <span> or</span> <a href="#"> Register</a> </div>
     </div>
   </div>
-</div>
-
-
+  <div class="down-header clear-fix">
+    <div class="container">
+      <div class="middle clear-fix">
+        <a href="#" class="logo">
+          <img src="img/Logo.png" alt="Logo">
+        </a>
+        <form action="#" method="get" class="search">
+          <input type="search" placeholder="Search Products…">
+          <button type="submit"></button>
+        </form>
+      </div>
+      <a href="#" class="bag"></a>
+      <nav class="navigation">
+         <ul>
+           <li><a href="#" class="active"> Home</a></li>
+           <li><a href="#"> Living room</a></li>
+           <li><a href="#"> Office</a></li>
+           <li><a href="#"> Bedroom</a></li>
+           <li><a href="#"> Blog</a></li>
+           <li><a href="#"> Contact</a></li>
+         </ul>
+      </nav>
+    </div>
+  </div>
+</header>
 </body>
 </html>
